[project]
name = "databricks-reference-data"
version = "0.1.0"
description = "Reference data integrations for Databricks Unity Catalog"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter, but SQL strings can be long)
    "E402",   # module level import not at top of file (Databricks notebooks)
    "F401",   # imported but unused (common in notebooks for side effects)
    "F821",   # undefined name (dbutils, spark, display are Databricks globals)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = [
    "E501",   # SQL strings in notebooks can be long
    "F821",   # Databricks globals (dbutils, spark, display)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
