[project]
name = "companies-house-mcp-server"
version = "0.1.0"
description = "MCP Server for UK Companies House API"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.12.5",
    "uvicorn>=0.34.2",
    "databricks-sdk>=0.60.0",
    "requests>=2.31.0",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest",
]

[project.scripts]
companies-house-mcp-server = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]

[tool.ruff.format]
docstring-code-format = true
