[project]
name = "yahoo-finance-mcp-server"
version = "0.1.0"
description = "MCP Server for Yahoo Finance stock data"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.12.5",
    "uvicorn>=0.34.2",
    "databricks-sdk>=0.60.0",
    "yfinance>=0.2.40",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest",
]

[project.scripts]
yahoo-finance-mcp-server = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]

[tool.ruff.format]
docstring-code-format = true
